try a bit harder to raise window for already running application

BUG: 407288